Update navigation link to point to GitHub profile

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 class="glitch" data-text="Mahdi Nabavi">Mahdi Nabavi</h1>
             <p>Erasing You Since Yesterday</p>
             <nav>
-                <a href="#about">About</a>
+                <a href="https://github.com/sirdoxa/">Github</a>
                 <a href="#subscriptions">Subscriptions</a>
                 <a href="https://sohrabzia.github.io/" target="_blank">Contact</a>
             </nav>
