--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DigiPurge</title>
+    <title>SiR DoxA</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -22,49 +22,31 @@
             <h1 class="glitch" data-text="Mahdi Nabavi">Mahdi Nabavi</h1>
             <p>Erasing You Since Yesterday</p>
             <nav>
-                <a href="https://github.com/sirdoxa/">Github</a>
-                <a href="#subscriptions">Subscriptions</a>
-                <a href="https://sohrabzia.github.io/" target="_blank">Contact</a>
+                <a href="https://github.com/sirdoxa/" target="_blank">Github</a>
+                <a href="https://x.com/realnbvi" target="_blank">X</a>
+                <a href="https://linktr.ee/sirdoxa" target="_blank">Linktree</a>
             </nav>
         </header>
 
         <section id="about">
-            <h2>About Us</h2>
-            <p>Welcome to DigiPurge, where we specialize in erasing your digital footprint faster than you can say
-                "Oops, I shouldn't have posted that." Our crack team of cyber-ninjas will hunt down every embarrassing
-                selfie, ill-advised tweet, and regrettable status update you've ever made.</p>
+            <h2>About me</h2>
+            <p>Hi! I'm Mahdi, a passionate programmer who loves technology and learning new concepts. I started my journey with Python and am currently focused on Blockchain. My goal is to combine creativity and technical knowledge to build innovative projects.
+                <br>
+                I'm always looking for new challenges and striving to improve my skills. Besides programming, I'm also interested in cybersecurity and penetration testing, and I enjoy working with Linux operating systems.
+                <br>
+                This website is a small corner of my world! If you're interested in collaboration or just want to chat, feel free to reach out.</p>
         </section>
 
         <section id="subscriptions">
-            <h2>Subscription Plans</h2>
+            <h2 >SOON !!!! 
+            </h2>
             <table class="subscription-table">
-                <tr>
-                    <th>Plan</th>
-                    <th>Price</th>
-                    <th>Features</th>
-                </tr>
-                <tr>
-                    <td>Digital Ghost</td>
-                    <td>$999/month</td>
-                    <td>Basic data removal, social media scrubbing, and a complimentary tin foil hat</td>
-                </tr>
-                <tr>
-                    <td>Cyber Phantom</td>
-                    <td>$9,999/month</td>
-                    <td>Advanced data removal, identity cloaking, and a personal cyber-bodyguard</td>
-                </tr>
-                <tr>
-                    <td>Quantum Vanish</td>
-                    <td>Your first-born child</td>
-                    <td>Complete digital erasure, time travel to undo your mistakes, and a new identity in a parallel
-                        universe</td>
-                </tr>
-            </table>
+                
         </section>
 
         <footer id="contact">
-            <p>Contact us at: weknoweverything@digipurge.com</p>
-            <p>Disclaimer: We're probably selling your data right now. But hey, that's showbiz, baby!</p>
+            <p></p>
+            <p></p>
         </footer>
     </div>
     <script>
