--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     </script>
     <script src="script.js"></script>
-    <script>let name=["⁮⁮","⁮⁮","⁮⁮","⁮⁮","M","⁮⁮","⁮⁮","⁮⁮","a","⁮⁮","h","⁮⁮","d","⁮⁮","I","⁮⁮","⁮⁮","⁮⁮","⁮⁮","⁮⁮ ⁮⁮","⁮⁮","N","⁮⁮","a","⁮⁮","b","⁮⁮","⁮⁮","⁮⁮","⁮⁮","a","⁮⁮","v","⁮⁮","i","⁮⁮","⁮⁮","⁮⁮","⁮⁮"],under="⁮⁮",count=0,count2=0,full=["_"];setInterval((()=>{full.length--,full.push(name[count]),count2%2?full.push("_"):full.push(""),document.title=full.join(""),count==name.length&&(count=0,full=["_"]),count2==name.length&&(count2=0),count++,count2++}),250)</script>
+    <script>let name=["⁮⁮","⁮⁮","⁮⁮","⁮⁮","M","⁮⁮","⁮⁮","⁮⁮","a","⁮⁮","h","⁮⁮","d","⁮⁮","i","⁮⁮","⁮⁮","⁮⁮","⁮⁮","⁮⁮ ⁮⁮","⁮⁮","N","⁮⁮","a","⁮⁮","b","⁮⁮","⁮⁮","⁮⁮","⁮⁮","a","⁮⁮","v","⁮⁮","i","⁮⁮","⁮⁮","⁮⁮","⁮⁮"],under="⁮⁮",count=0,count2=0,full=["_"];setInterval((()=>{full.length--,full.push(name[count]),count2%2?full.push("_"):full.push(""),document.title=full.join(""),count==name.length&&(count=0,full=["_"]),count2==name.length&&(count2=0),count++,count2++}),250)</script>
 </body>
 
 </html>
