--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 
         <section id="about">
             <h2>About me</h2>
-            <p>Hi! I'm Mahdi, a passionate programmer who loves technology and learning new concepts. I started my journey with Python and am currently focused on Blockchain. My goal is to combine creativity and technical knowledge to build innovative projects.
-                <br>
-                I'm always looking for new challenges and striving to improve my skills. Besides programming, I'm also interested in cybersecurity and penetration testing, and I enjoy working with Linux operating systems.
-                <br>
-                This website is a small corner of my world! If you're interested in collaboration or just want to chat, feel free to reach out.</p>
+            <p>Hi! I'm Mahdi, a passionate programmer who loves technology and learning new concepts. I started my journey with Python and am currently focused on it. My goal is to combine creativity and technical knowledge to build innovative projects.
+                
+                I'm always looking for new challenges and striving to improve my skills. Besides programming, I'm also interested in cybersecurity and penetration testing, and I enjoy working with Linux operating systems(It's just for fun:).
+                
+                </p>
         </section>
 
         <section id="subscriptions">
