--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="content">
         <header>
             <h1 class="glitch" data-text="Mahdi Nabavi">Mahdi Nabavi</h1>
-            <p>Erasing You Since Yesterday</p>
+            <p>Learning Python , Linux and something else :)</p>
             <nav>
                 <a href="https://github.com/sirdoxa/" target="_blank">Github</a>
                 <a href="https://x.com/realnbvi" target="_blank">X</a>
