--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2>About me</h2>
             <p>Hi! I'm Mahdi, a passionate programmer who loves technology and learning new concepts. I started my journey with Python and am currently focused on it. My goal is to combine creativity and technical knowledge to build innovative projects.
                 
-                I'm always looking for new challenges and striving to improve my skills. Besides programming, I'm also interested in cybersecurity and penetration testing, and I enjoy working with Linux operating systems(It's just for fun:).
+                I'm always looking for new challenges and striving to improve my skills. Besides programming, I'm also interested in cybersecurity and penetration testing, and I enjoy working with Linux operating systems ( It's just for fun:) because i'm learning right now ).
                 
                 </p>
         </section>
