--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 
         <section id="about">
             <h2>About me</h2>
-            <p>Hi! I'm Mahdi, a passionate programmer who loves technology and learning new concepts. I started my journey with Python and am currently focused on it. My goal is to combine creativity and technical knowledge to build innovative projects.
+            <p>Hi! I'm Mahdi, a passionate programmer who loves technology and learning new concepts. I started my journey with Python and am currently focused on it.
+                 My goal is to combine creativity and technical knowledge to build innovative projects.
                 
-                I'm always looking for new challenges and striving to improve my skills. Besides programming, I'm also interested in blockchain and cybersecurity, and I enjoy working with Linux operating systems ( It's just for fun:) because i'm learning right now ).
+                I'm always looking for new challenges and striving to improve my skills. Besides programming,
+                 I'm also interested in blockchain and cybersecurity, and I enjoy working with Linux operating systems .
                 
                 </p>
         </section>
